--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cápsula do Tempo</title>
     <link rel="stylesheet" href="./style/login.css">
-    <script src="./script/login.js"></script>
+    <script src="./script/login.js" defer></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                 </div>
 
                 <button id="btnLogin" type="submit">Validar</button>
-                <a href="esqueci.html">Esqueci a Senha</a>
+                <a href="cadastro.html">Esqueci a Senha</a>
             </form>
         </div>
     </section>
